<resources>
    <string name="app_name">FLearnS</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">E-mail:</string>
    <string name="hint_password">Password</string>

    <string name="text_recuperar_pwd">Recuperar password</string>
    <string name="tv_registro">Registrarse</string>
    <string name="tv_login">Inicio de Sesión</string>
    <string name="text_enter">Ingresar</string>
    <string name="tv_user_register">Registro de usuario</string>

    <string name="reg_user_empty">Ingrese la información</string>
    <string name="msg_error_pwd">El password no coincide</string>
    <string name="msg_error">An error ocurred</string>
    <string name="msg_welcome">Bienvenid@:</string>
</resources>